--- a/src/partials/edit_panels.html
+++ b/src/partials/edit_panels.html
@@ -1,9 +1,12 @@
 <div class='row pt-4 pb-4'>
 
   <div class='col-sm-6'>
-    <h5>Left</h5>
     <div class='card'>
       <div class='card-body'>
+        <div class="form-group">
+          <label for="plainFormTextarea">Plain form HTML</label>
+          <textarea class="form-control" id="plainFormTextarea" rows="10"></textarea>
+        </div>
       </div>
     </div>
   </div>
