--- a/src/partials/edit_panels.html
+++ b/src/partials/edit_panels.html
@@ -12,9 +12,12 @@
   </div>
 
   <div class='col-sm-6'>
-    <h5>Right</h5>
     <div class='card'>
       <div class='card-body'>
+        <div class="form-group">
+          <label for="transformedFormTextarea">Framework form HTML</label>
+          <textarea class="form-control" id="transformedFormTextarea" rows="10"></textarea>
+        </div>
       </div>
     </div>
   </div>
