--- a/src/partials/edit_panels.html
+++ b/src/partials/edit_panels.html
@@ -15,7 +15,7 @@
     <div class='card'>
       <div class='card-body'>
         <div class="form-group">
-          <label for="transformedFormTextarea">Framework form HTML</label>
+          <label for="transformedFormTextarea">Bootstrap form HTML</label>
           <textarea class="form-control" id="transformedFormTextarea" rows="10"></textarea>
         </div>
       </div>
