--- a/src/partials/mailing_list_signup.html
+++ b/src/partials/mailing_list_signup.html
@@ -1,6 +1,9 @@
       <!-- Mailing list signup form -->
       <div class='row'>
         <div class='col-sm-12'>
+
+          ${require('./copyright.html')}
+
           <div class='card'>
             <div class='card-body'>
               <div class="card-title">
