Add blurb and tweak panel header text

--- a/src/partials/edit_panels.html
+++ b/src/partials/edit_panels.html
@@ -4,7 +4,7 @@
     <div class='card'>
       <div class='card-body'>
         <div class="form-group">
-          <label for="plainFormTextarea">Plain form HTML</label>
+          <label for="plainFormTextarea">Plain form fields HTML</label>
           <textarea class="form-control" id="plainFormTextarea" rows="10"></textarea>
         </div>
       </div>
@@ -15,7 +15,7 @@
     <div class='card'>
       <div class='card-body'>
         <div class="form-group">
-          <label for="transformedFormTextarea">Bootstrap form HTML</label>
+          <label for="transformedFormTextarea">Bootstrap form fields HTML</label>
           <textarea class="form-control" id="transformedFormTextarea" rows="10"></textarea>
         </div>
       </div>
