Rename output textarea to show its for bootstrap

--- a/src/partials/edit_panels.html
+++ b/src/partials/edit_panels.html
@@ -15,8 +15,8 @@
     <div class='card'>
       <div class='card-body'>
         <div class="form-group">
-          <label for="transformedFormTextarea">Bootstrap form fields HTML</label>
-          <textarea class="form-control" id="transformedFormTextarea" rows="10"></textarea>
+          <label for="bootstrapHtmlTextarea">Bootstrap form fields HTML</label>
+          <textarea class="form-control" id="bootstrapHtmlTextarea" rows="10"></textarea>
         </div>
       </div>
     </div>
