Use <strong> for panel headings

--- a/src/partials/edit_panels.html
+++ b/src/partials/edit_panels.html
@@ -4,7 +4,7 @@
     <div class='card'>
       <div class='card-body'>
         <div class="form-group">
-          <label for="plainFormTextarea">Plain form fields HTML</label>
+          <label for="plainFormTextarea"><strong>Plain form fields HTML</strong></label>
           <textarea class="form-control" id="plainFormTextarea" rows="12"></textarea>
         </div>
       </div>
@@ -15,7 +15,7 @@
     <div class='card'>
       <div class='card-body'>
         <div class="form-group">
-          <label for="bootstrapHtmlTextarea">Bootstrap form fields HTML</label>
+          <label for="bootstrapHtmlTextarea"><strong>Bootstrap form fields HTML</strong></label>
           <textarea class="form-control" id="bootstrapHtmlTextarea" rows="12"></textarea>
         </div>
       </div>
